Add dotenv - Protect my secret data in .env file

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<div><%= cl_image_tag("x96f7yh5ckwlmzp0tibb",
+      width: 400, height: 300, crop: :fill) %></div>
