--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -33,7 +33,8 @@
           <div class="card-deck">
             <div class="card bg-warning" style="width: 300px;">
               <div class="card-header">Dee Dee Dexter</div>
-
+<%= cl_image_tag("x96f7yh5ckwlmzp0tibb",
+      width: 400, height: 300, crop: :fill) %>
               <div class="embed-responsive embed-responsive-16by9">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BEJ3d6IgmVk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
               </div>
